Fix always visible scrollbar Update app title

--- a/app/assets/css/matcha.css
+++ b/app/assets/css/matcha.css
@@ -1,3 +1,7 @@
+html {
+	overflow: auto !important;
+}
+
 a {
 	all: inherit;
 }
